# anafora_fixes

./: pyproject.toml
src/: manage.py  testing.py
src/anafora/: __init__.py  anaforaAuthMiddleware.py  anaforaProjectManager.py  projectSetting.py  taskFile.py  urls.py  views.py
src/anafora/templatetags/: index_extras.py
src/anafora/tests/: databaselessTest.py  testAnaforaAuthMiddleware.py  test_anaforaProjectManager.py  test_projectSetting.py  test_taskFile.py  test_urls.py  tests.py
src/anaforaTest/: urls.py  views.py
src/web/: urls.py  wsgi.py
