[project]
name = "anafora-fixes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
             "django",
             "ruff>=0.15.1",
             "ty>=0.0.17",
]
[tool.uv.sources]
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
